# multipol

./: README.md  multipol.cabal
src/: MultiPol.hs
